Expanded directory tree

--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "es6-promise-pool": "^2.5.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
+    "fs-extra": "^8.0.0",
     "helmet": "^3.18.0",
     "lodash": "^4.17.11",
     "node-fetch": "^2.3.0",
+    "recursive-readdir": "^2.2.2",
     "serve-static": "^1.13.2",
     "stringify-tree": "^1.0.2",
     "yamljs": "^0.3.0",
