--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
     "start": "atm-start",
     "test": "mocha --require espower-typescript/guess \"test/**/*.test.ts\"",
     "test:one": "mocha --require espower-typescript/guess \"test/**/${TEST:-*.test.ts}\"",
-    "typedoc": "npm run doc"
+    "typedoc": "npm run doc",
+    "spider": "npm run compile:ts && node ./lib/script/spider.js Azure_Samples"
   },
   "engines": {
     "node": ">=8.1.0",
