--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "test": "mocha --require espower-typescript/guess \"test/**/*.test.ts\"",
     "test:one": "mocha --require espower-typescript/guess \"test/**/${TEST:-*.test.ts}\"",
     "typedoc": "npm run doc",
-    "spider": "npm run compile:ts && node ./lib/script/spider.js Azure_Samples"
+    "spider": "npm run compile:ts && node ./lib/script/spider.js Azure-Samples"
   },
   "engines": {
     "node": ">=8.1.0",
