--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "serve-static": "^1.13.2",
     "stringify-tree": "^1.0.2",
     "yamljs": "^0.3.0",
+    "yargs": "^13.2.4",
     "zip-a-folder": "0.0.6"
   },
   "devDependencies": {
