--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "test": "mocha --require espower-typescript/guess \"test/**/*.test.ts\"",
     "test:one": "mocha --require espower-typescript/guess \"test/**/${TEST:-*.test.ts}\"",
     "typedoc": "npm run doc",
-    "spider": "npm run compile:ts && node ./lib/script/spider.js Azure-Samples"
+    "spider": "npm run compile:ts && node ./lib/script/spider.js -o Azure-Samples -s cognitive"
   },
   "engines": {
     "node": ">=8.1.0",
