--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@atomist/sdm-local": "^1.0.9",
     "@types/d3": "^5.7.2",
     "@types/mocha": "^5.2.7",
+    "@types/pg": "^7.4.14",
     "@types/power-assert": "^1.5.0",
     "espower-typescript": "^9.0.2",
     "mocha": "^6.1.4",
