Add k8s spec aspect
Create aspect based on entire Kubernetes spec found in the top-level
of a repository.

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@atomist/sdm-pack-spring": "^2.0.0",
     "@atomist/slack-messages": "^1.1.1",
     "@octokit/rest": "^16.28.3",
+    "@types/json-stable-stringify": "^1.0.32",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
     "@types/yamljs": "^0.2.30",
@@ -56,6 +57,7 @@
     "express-handlebars": "^3.1.0",
     "fs-extra": "^8.1.0",
     "helmet": "^3.18.0",
+    "json-stable-stringify": "^1.0.1",
     "lodash": "^4.17.15",
     "node-fetch": "^2.6.0",
     "pg": "^7.11.0",
