--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "sdm",
     "aspect"
   ],
-  "main": "./src/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./index.js",
+  "types": "./index.d.ts",
   "peerDependencies": {
     "@atomist/automation-client": "^1.7.0",
     "@atomist/microgrammar": "^1.2.1",
@@ -101,7 +101,7 @@
     "autotest": "supervisor --watch src --extensions ts --no-restart-on exit --quiet --exec npm -- test",
     "build": "run-s compile test lint doc",
     "clean": "run-p clean:compile clean:test clean:doc clean:run",
-    "clean:compile": "rimraf git-info.json dist src/**/*.js src/**/*.js.map src/**/*.ts.map src/**/*.d.ts src/lib/typings/types.ts",
+    "clean:compile": "rimraf git-info.json lib \"index.{d.ts,js}{,.map}\" \"{src,test}/**/*.{d.ts,js}{,.map}\" src/typings/types.ts",
     "clean:dist": "run-s clean clean:npm",
     "clean:doc": "rimraf doc",
     "clean:npm": "rimraf node_modules",
@@ -112,7 +112,7 @@
     "compile:pack": "webpack",
     "doc": "typedoc --mode modules --excludeExternals --ignoreCompilerErrors --exclude \"**/*.d.ts\" --out doc src/index.ts src/lib",
     "git:info": "atm-git-info",
-    "gql:gen": "atm-gql-gen && mv lib/typings/types.ts src/lib/typings/types.ts",
+    "gql:gen": "atm-gql-gen",
     "lint": "tslint --config tslint.json --format verbose --project .",
     "lint:fix": "npm run lint -- --fix",
     "start": "atm-start",
