Webpack loves dist/

--- a/package.json
+++ b/package.json
@@ -100,13 +100,14 @@
   "scripts": {
     "autotest": "supervisor --watch src --extensions ts --no-restart-on exit --quiet --exec npm -- test",
     "build": "run-s compile test lint doc",
-    "clean": "run-p clean:compile clean:test clean:doc clean:run",
+    "clean": "run-p clean:compile clean:pack clean:test clean:doc clean:run",
     "clean:compile": "rimraf git-info.json lib \"index.{d.ts,js}{,.map}\" \"{src,test}/**/*.{d.ts,js}{,.map}\" src/lib/typings/types.ts",
     "clean:dist": "run-s clean clean:npm",
     "clean:doc": "rimraf doc",
     "clean:npm": "rimraf node_modules",
     "clean:run": "rimraf *-v8.log profile.txt log",
     "clean:test": "rimraf .nyc_output coverage",
+    "clean:pack": "rimraf dist",
     "compile": "run-s git:info gql:gen compile:ts compile:pack",
     "compile:ts": "tsc --project .",
     "compile:pack": "webpack",
