Create integration tests that can run in Docker

--- a/package.json
+++ b/package.json
@@ -119,6 +119,8 @@
     "start": "atm-start",
     "test": "mocha --require espower-typescript/guess \"test/**/*.test.ts\"",
     "test:one": "mocha --require espower-typescript/guess \"test/**/${TEST:-*.test.ts}\"",
+    "test:integration": "mocha --require espower-typescript/guess \"integration-test/**/*.test.ts\"",
+    "integration-test": "run-s --continue-on-error db:delete db:create test:integration",
     "typedoc": "npm run doc",
     "db:create": "psql --command \"CREATE USER org_viz WITH SUPERUSER PASSWORD 'atomist'\" && createdb -O org_viz org_viz && psql -f ./ddl/create.ddl org_viz",
     "db:delete": "psql --command \"DROP DATABASE org_viz\" --command \"DROP ROLE org_viz\""
