It is running the things in docker

--- a/integration-test/Dockerfile
+++ b/integration-test/Dockerfile
@@ -1,6 +1,20 @@
-FROM postgres:10
+FROM node:10
 
-RUN apt-get update || echo "WTF-ever"
-RUN apt-get install -y curl
-RUN curl -sL https://deb.nodesource.com/setup_10.x | bash -
-RUN apt-get install -y nodejs npm
+RUN apt-get update
+RUN apt-get install -y postgresql
+
+USER postgres
+
+RUN service postgresql start &&\
+    psql --command "CREATE USER root WITH SUPERUSER PASSWORD 'sebastian';" && createdb root root
+
+ENV PGUSER root
+ENV PGPASSWORD sebastian
+
+USER root
+
+# docker build -t node-and-pg integration-test
+# docker run --rm --mount source=$(pwd),target=/app,type=bind -u postgres -it node-and-pg /bin/bash
+# > service postgresql start
+# > cd /app
+# > npm run integration-test
