Migrate to keying fingerprints by workspace (#251)
* Migrate to keying fingerprints by workspace

* Create integration tests that can run in Docker

* First real failure

* Refactor, pull out method

* Fix insert into repo_fingerprints

BREAKING CHANGE: ProjectAnalysisResultStore.persistAdditionalFingerprints now requires workspaceId populated in its parameter.

* Refactor, moving parameters

* Add parameter passing

* Refactor, rename parameter

* Missed this earlier

* Insert into fingerprint table

* Remove local ideal-setting functionality

BREAKING: ideal storage in Postgres is no more

* Autofix: TypeScript header

[atomist:generated] [atomist:autofix=typescript_header]

Autofix: tslint

[atomist:generated] [atomist:autofix=tslint]

Autofix: TypeScript imports

[atomist:generated] [atomist:autofix=typescript_imports]

* Remove ProblemStore and undesirableUsageChecker

BREAKING CHANGES: ProblemStore is gone, undesirableUsageChecker is gone

* Autofix: tslint

[atomist:generated] [atomist:autofix=tslint]

* Remove loadFingerprintById

This was only used by ideal/problem stuff that has been removed

* Automatically change directory and start pg service

in integration test docker container

* Correct docker run command

It doesn't work if PGUSER doesn't match the logged in one

* Next legit failure

* Test message

* Correct typedoc

* Throw exception for invalid SQL

BREAKING CHANGE: (technically) fingerprintsInWorkspace and related methods will throw an exception on failure
instead of returning an empty array.

* Include display name and path

* Refactor, move parameters

* Add fingerprints to multiple workspaces

Failing test

* Add workspaceId parameter

* Adding workspace to the delete exposes a problem

repo_snapshots needs workspace in the primary key

* Separate pieces of db:create

for multi-platform

* Add workspace to PK of repo_snapshots

There is still a problem,

--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "ts-node": "^8.3.0",
     "tslint": "^5.19.0",
     "typedoc": "^0.15.0",
-    "typescript": "^3.6.3",
+    "typescript": "^3.6.4",
     "webpack": "^4.37.0",
     "webpack-cli": "^3.3.6"
   },
@@ -119,8 +119,13 @@
     "start": "atm-start",
     "test": "mocha --require espower-typescript/guess \"test/**/*.test.ts\"",
     "test:one": "mocha --require espower-typescript/guess \"test/**/${TEST:-*.test.ts}\"",
+    "test:integration": "mocha --require espower-typescript/guess \"integration-test/**/*.test.ts\"",
+    "integration-test": "run-s --continue-on-error db:delete db:create test:integration",
     "typedoc": "npm run doc",
-    "db:create": "psql --command \"CREATE USER org_viz WITH SUPERUSER PASSWORD 'atomist'\" && createdb -O org_viz org_viz && psql -f ./ddl/create.ddl org_viz",
+    "db:create": "run-s db:create-user db:create-db db:create-tables",
+    "db:create-user": "psql --command \"CREATE USER org_viz WITH SUPERUSER PASSWORD 'atomist'\"",
+    "db:create-db": "createdb -O org_viz org_viz",
+    "db:create-tables": "psql -f ./ddl/create.ddl org_viz",
     "db:delete": "psql --command \"DROP DATABASE org_viz\" --command \"DROP ROLE org_viz\""
   },
   "engines": {
